
MavenBuilder
----------------------
* Fix for CC-40 where download failures were treated as success. Patch by Tim Shadel

MavenSnapshotDependency
----------------------
* Add new SourceControl that will query Maven SNAPSHOT to determine if a build should proceed. Submitted by Tim Shadel

Project
----------------------
* Reset ProjectState to IDLE in case of an exception while building. Patch by Will Gwaltney

SSCM & SSCMBootstrapper
----------------------
* New SourceControl and Bootstrapper for SSCM-support. Contribution by Matt Harp

testdetails.xsl
----------------------
* patch for JS-escape template so whole string is escaped and line feeds are dealt with properly. Patch by Han Wang and Roy O. Wright

X10Publisher
----------------------
* A new publisher to controlling an X10 electronic device based on the build completion status, i.e. turn a light on when the build breaks and then turn it off when the build is successful.

website / documentation
----------------------
* Rework navigation for feedback, completeness and consistency. Convert navigation from images to text. Convert to semantic markup. Address inconsistency of configxml.html. Patch by Joe Schmetzer
* More documentation enhancements contributed by Joe Schmetzer. For more details, see http://sourceforge.net/mailarchive/forum.php?thread_id=5363380&forum_id=2202

CruiseControl Release Notes - 2.1.6

AlwaysBuild
----------------------
* New SourceControl that always returns a modification. Submitted by Eric Pugh

AntBuilder
----------------------
* Added more infomative exception when log file doesn't contain a build tag. Patch by Dave Glowacki
* Added check to ensure that log file exists before trying to get contents.
* Fixed getCommandLineArgs to handle EmptyLabelIncrementer
* Added timeout attribute. Patch by Igor Fedorenko
* Added two XMLFilters to remove empty <message>- and <task>-elements from the XML log file in getAntLogAsElement.

BuildInfoTag
----------------------